<resources>

    <string name="app_name">Wydatki</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="title_activity_main">Konta</string>
    <string name="title_activity_categories">Kategorie</string>
    <string name="title_activity_transactions">Transakcje</string>
    <string name="title_activity_parameters">Parametry</string>
    <string name="title_activity_edit_account">Szczegóły konta</string>
    
    <string name="dialog_title_error">Błąd</string>
    <string name="dialog_title_message">Wiadomość</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Anuluj</string>      
	<string name="dialog_try_again">Spróbuj ponownie</string>
	
	<string name="dialog_no_value">Nie podano kwoty transakcji!</string>
	<string name="dialog_empty_field">Nie uzupełniono poprawnie pola:</string>
	<string name="dialog_empty_fields">Nie uzupełniono poprawnie pól:</string>
	<string name="dialog_question_remove_transaction">Czy napewno usunąć wybraną transakcję?</string>
	<string name="dialog_message_offline">Operacja wykonana Offline.</string>
	
	<string name="download_error_try_again">Błąd pobierania, spróbuj ponownie.</string>
	
	<string name="getting_more_data">Pobieram dane&#8230;</string>
	<string name="sending_information">Wysyłam dane&#8230;</string>
    <string name="get_more_data">Pobierz kolejne</string>
	<string name="delete">Usuń</string>
	<string name="edit">Edytuj</string>
    <string name="add">Dodaj</string>
    <string name="details">Szczegóły</string>
    <string name="yes">Tak</string>
    <string name="no_selected_value">--brak--</string>
    <string name="no">Nie</string> 
    <string name="from">Od</string>
    <string name="to">Do</string> 
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>   
    <string name="no_value">(brak wartości)</string> 
    <string name="options">Opcje</string> 
    
    <string name="refresh">Odśwież</string>
    <string name="search">Szukaj</string>
    
    <string name="nothing_to_show_on_list">Brak elementów na liście</string>
    
    <string name="history">Historia</string>
    
    <string name="account_show">Pokaż szczegóły</string>
    <string name="account_update">Aktualizacja salda</string>
    
    <string name="lock">Zablokuj</string>
    <string name="unlock">Odblokuj</string>
        
    <string name="entity_account">rachunek</string>    
    <string name="entity_parameter">parametr</string>    
    <string name="entity_category">kategorię</string>
    <string name="entity_project">projekt</string>
    
    <string name="edit_account_name">Nazwa konta</string>
    <string name="edit_account_balance">Kwota otwarcia</string>
    <string name="edit_account_isBlocked">Konto aktywne</string>
    <string name="edit_account_isVisibleForAll">Widoczne dla wszystkich</string>
    <string name="date_and_time">Data i godzina</string>
    <string name="account_from">Z rachunku</string>
    <string name="category">Kategoria</string>
    <string name="balance">Kwota</string>
    <string name="note">Notatka</string>
    <string name="account_to">Na rachunek</string>
    <string name="additional_parameters">Paremetry dodatkowe</string>
    <string name="standart_parameters">Parametry podstawowe</string>
    
    <string name="transaction_remove">Usuń transakcję</string>
    
    <string name="preferences_login_pref">Ustawienia logowania</string>
    <string name="preferences_server_pref">Ustawienia serwera</string>
    <string name="preferences_login">Login użytkownika</string>
    <string name="preferences_remember_password">Zapamiętaj hasło</string>
    <string name="preferences_password">Hasło użytkownika</string>
    <string name="preferences_server_address">Adres serwera</string>
    <string name="name">Nazwa</string>
    <string name="is_available">Czy dostępny?</string>
    <string name="parameter_type">Typ parametru</string>
    <string name="parameter_default_value">Domyślna wartość</string>
    <string name="parameter_datasource">Elementy listy</string>
    <string name="parameter_datasource_help">wartości oddziel znakiem ;</string>
    <string name="add_new">Dodaj nowy</string>
    <string name="parameters">Parametry</string>
    <string name="accounts">Konta</string>
    <string name="categories">Kategorie</string>
    <string name="settings">Ustawienia</string>
    <string name="category_parent">Kategoria nadrzędna</string>
    <string name="saldo">"saldo: "</string>
    
    <string name="transaction_list_get_more_issues">Pobierz kolejne transakcje</string>
    <string name="transaction_list_getting_more_issues">Pobieranie transackcji</string>
    <string name="project">Projekt</string>
    <string name="projects">Projekty</string>
    <string name="edit_account_is_in_sum">Czy zliczać do sumy salda?</string>
    <string name="edit_category_add_parameter">dodaj parametr</string>
    <string name="edit_shopitem_name">Nazwa</string>
    <string name="edit_shopitem_isComplet">Czy zrealizowane?</string>
    <string name="edit_shopitem_unit">Jednostka</string>
    <string name="edit_shopitem_value">Liczba</string>
    

</resources>