<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_etbx_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        style="@style/Style_TextWithShadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/edit_cbx_isActive"
            style="@style/Style_TextWithShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/is_available" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_parent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/edit_category_spn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_blue" />
    </LinearLayout>

</LinearLayout>