<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView02"
        style="@style/Style_TextWithShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="@color/background_orange"
        android:padding="4dp"
        android:text="@string/standart_parameters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Style_TextWithShadow"
            android:text="@string/date_and_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <Button
                android:id="@+id/invoke_transaction_header_btn_date"
                style="@style/Style_TextWithShadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@color/btn_blue"
                android:text="data" />

            <Button
                android:id="@+id/invoke_transaction_header_btn_time"
                style="@style/Style_TextWithShadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/btn_blue"
                android:text="godzina" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_account_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_from"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/invoke_transaction_header_spinner_account_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn_blue" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_account_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/invoke_transaction_header_spinner_account_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/invoke_transaction_header_spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Style_TextWithShadow"
            android:text="@string/balance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <ToggleButton
                android:id="@+id/invoke_transaction_header_tbn_ispositive"
                style="@style/Style_TextWithShadow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/btn_blue"
                android:text="-"
                android:textOff="-"
                android:textOn="+" />

            <EditText
                android:id="@+id/invoke_transaction_header_etbx_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/invoke_transaction_header_btn_calculator"
                style="@style/Style_TextWithShadow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/btn_blue"
                android:text="=" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invoke_transaction_header_ll_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            style="@style/Style_TextWithShadow"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/invoke_transaction_header_etbx_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <TextView
        android:id="@+id/invoke_transaction_header_addition_parameters"
        style="@style/Style_TextWithShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="@color/background_orange"
        android:padding="4dp"
        android:text="@string/additional_parameters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>